--- a/web/src/main/resources/templates/trendgraph.html
+++ b/web/src/main/resources/templates/trendgraph.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta content="IE=edge" http-equiv="X-UA-Compatible" />
     <meta charset="UTF-8">
     <title>Team Happiness</title>
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-      <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.js"></script>
-      <link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.css" rel="stylesheet" />
+    <script src="https://www.gstatic.com/charts/loader.js" type="text/javascript"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js" type="text/javascript"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.js" type="text/javascript"></script>
+      <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript">
 
         $.urlParam = function(name){
@@ -18,11 +18,11 @@
             else{
                 return results[1] || 0;
             }
-        }
+        };
 
         var showTable;
 
-        if($.urlParam == null || !$.urlParam('table') || $.urlParam('table') == 'false'){
+        if($.urlParam == null || !$.urlParam('table') || $.urlParam('table') === 'false'){
             showTable = false;
         } else {
             showTable = true;
@@ -31,22 +31,7 @@
         console.log(showTable);
 
       google.charts.load('current', {'packages':['line', 'table']});
-      google.charts.setOnLoadCallback(drawChart);
-      if(showTable){
-          console.log('showTable');
-        google.charts.setOnLoadCallback(drawTable);
-      }
-
-    function timedReload(team) {
-
-        if(team === undefined){
-            teamParam = "";
-        } else {
-            teamParam = "?team=" + team;
-        }
-
-        setTimeout("location.replace('//' + location.host + location.pathname + teamParam);", 30000);
-    }
+      google.charts.setOnLoadCallback(loadChart);
 
     var team;
 
@@ -56,15 +41,24 @@
         team = $.urlParam('team');
     }
 
-    function drawChart() {
+    function loadChartData(url, slug) {
+          return $.ajax({
+            url: url + slug + "/",
+            dataType: "json"
+          });
+        }
 
-    var jsonData = $.ajax({
-         url: "/trend/weekly/" + team + "/",
-          dataType: "json",
-          async: false
-          }).responseText;
+    function loadChart() {
+      loadChartData("/trend/weekly/", team).done(drawChart);
+      if(showTable){
+        console.log('showTable');
+        loadChartData("/trend/weekly/", team).done(drawTable);
+      }
+    }
 
-     var data = new google.visualization.DataTable(jsonData);
+    function drawChart(data) {
+
+     var dataTable = new google.visualization.DataTable(data);
 
       var options = {
         chart: {
@@ -88,30 +82,24 @@
 
       var chart = new google.charts.Line(document.getElementById('linechart_material'));
 
-      chart.draw(data, google.charts.Line.convertOptions(options));
+      chart.draw(dataTable, google.charts.Line.convertOptions(options));
     }
 
-    function drawTable() {
+    function drawTable(data) {
 
-          var jsonData = $.ajax({
-              url: "trend/weekly/" + team + "/",
-              dataType: "json",
-              async: false
-          }).responseText;
-
-          var data = new google.visualization.DataTable(jsonData);
+          var dataTable = new google.visualization.DataTable(data);
 
           var table = new google.visualization.Table(document.getElementById('table'));
 
-          table.draw(data);
+          table.draw(dataTable);
       }
 
     $(document).ready(function(){
-        if($.urlParam('success') == "true") {
+        if($.urlParam('success') === "true") {
             toastr.options = {
                 "positionClass": "toast-top-full-width",
                 "extendedTimeOut": "10000"
-            }
+            };
             toastr.success('Thank you for your submission');
         }
     });
