--- a/web/src/main/resources/templates/trendgraph.html
+++ b/web/src/main/resources/templates/trendgraph.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
+
 <html lang="en">
-  <head>
-    <meta content="IE=edge" http-equiv="X-UA-Compatible" />
-    <meta charset="UTF-8">
+<head>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta charset="UTF-8">
+  <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
     <title>Team Happiness</title>
+    <script src="/webjars/jquery/jquery.min.js" type="text/javascript"></script>
     <script src="https://www.gstatic.com/charts/loader.js" type="text/javascript"></script>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js" type="text/javascript"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.js" type="text/javascript"></script>
       <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript">
@@ -54,6 +56,7 @@
         console.log('showTable');
         loadChartData("/trend/weekly/", team).done(drawTable);
       }
+      loadChartData("/trend/chartjs/weekly/", team).done(drawHappinessChart);
     }
 
     function drawChart(data) {
@@ -103,10 +106,78 @@
             toastr.success('Thank you for your submission');
         }
     });
+
+        function getChartConfig(data, title, yAxisLabel1, yAxisLabel2) {
+          return {
+            type: 'line',
+            data: data,
+            options: {
+              title: {
+                display: true,
+                text: title
+              },
+              scales: {
+                yAxes: [{
+                  scaleLabel: {
+                    display: true,
+                    labelString: yAxisLabel1
+                  },
+                  type: "linear",
+                  ticks: {
+                    beginAtZero: true,
+                    min: 0,
+                    max: 5
+                  },
+                  position: "left",
+                  id: "y-axis-1"
+                },{
+                  scaleLabel: {
+                    display: true,
+                    labelString: yAxisLabel2
+                  },
+                  type: "linear",
+                  ticks: {
+                    beginAtZero: true,
+                    stepSize: 1
+                  },
+                  position: "right",
+                  id: "y-axis-2",
+                  gridLines: {
+                    drawOnChartArea: false
+                  }
+                }],
+                xAxes: [{
+                  type: 'time',
+                  time: {
+                    unit: 'week',
+                    tooltipFormat: 'll',
+                    min: moment().year(moment().year() - 1)
+                  }
+                }]
+              }
+            }
+          }
+        }
+
+        function drawHappinessChart(data) {
+
+          var ctx = $('#chart1');
+
+          new Chart(ctx, getChartConfig(data, "Team Happiness", "Average Rating", "Response Count"));
+        }
     </script>
   </head>
   <body>
     <div id="linechart_material" style="width: 900px; height: 500px"></div>
     <div id="table" ></div>
+    
+    <canvas id="chart1"></canvas>
+
+
+    <script src="/webjars/popper.js/umd/popper.min.js" type="text/javascript"></script>
+    <script src="/webjars/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="/webjars/feather-icons/dist/feather.js"></script>
+    <script src="/webjars/moment/min/moment.min.js"></script>
+    <script src="/webjars/chartjs/Chart.js"></script>
   </body>
 </html>
