--- a/web/src/main/resources/templates/trendgraph.html
+++ b/web/src/main/resources/templates/trendgraph.html
@@ -6,17 +6,18 @@
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
     <title>Team Happiness</title>
+    <link href='/webjars/bootstrap/css/bootstrap.min.css' rel='stylesheet'>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div id="linechart_material" style="width: 900px; height: 500px"></div>
-    <div id="table" ></div>
     
     <canvas id="chart1"></canvas>
 
+    <div id="table" ></div>
+
     <script src="https://www.gstatic.com/charts/loader.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.js" type="text/javascript"></script>
     <script src="/webjars/jquery/jquery.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.js" type="text/javascript"></script>
     <script src="/webjars/popper.js/umd/popper.min.js" type="text/javascript"></script>
     <script src="/webjars/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="/webjars/feather-icons/dist/feather.js"></script>
