--- a/web/src/main/resources/templates/trendgraph.html
+++ b/web/src/main/resources/templates/trendgraph.html
@@ -7,13 +7,59 @@
   <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
     <title>Team Happiness</title>
     <link href='/webjars/bootstrap/css/bootstrap.min.css' rel='stylesheet'>
+    <link rel='stylesheet' th:href="@{/static/css/trendgraph.css}">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    
-    <canvas id="chart1"></canvas>
+  <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
+      <span class="navbar-brand col-sm-3 col-md-2 mr-0">Team Dashboard</span>
+      <span class="mr-auto nav-bar-text"><a class="nav-link text-white" id="team-name"></a></span>
+  </nav>
+  <div class="container-fluid">
+      <div class="row">
+          <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+              <div class="sidebar-sticky">
+                  <ul class="nav flex-column">
+                      <li class="nav-item">
+                          <a class="nav-link active" id="happiness-link">
+                              <span data-feather="bar-chart-2"></span>
+                              Happiness
+                          </a>
+                      </li>
+                  </ul>
+              </div>
+          </nav>
 
-    <div id="table" ></div>
+          <main class="col-md-9 ml-sm-auto col-lg-10 px-4" role="main">
+              <div class="d-block" id="happiness-content">
+                  <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                      <h1 class="h2">Happiness</h1>
+                      <div class="btn-toolbar mb-2 mb-md-0">
+                          <div class="btn-group mr-2">
+                              <button class="btn btn-sm btn-outline-secondary" id="happiness-refresh-button"
+                                      type="button"><span
+                                      data-feather="refresh-cw"></span></button>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="container">
+                      <div class="row">
+                            <canvas id="chart1"></canvas>
+                      </div>
+                      <hr class="mb-4">
+                      <div class="row">
+                          <div class="table-responsive">
+                              <table class="table table-striped table-sm" id="table-body">
+
+                              </table>
+                          </div>
+                          <div id="table" ></div>
+                      </div>
+                  </div>
+              </div>
+          </main>
+      </div>
+  </div>
 
     <script src="https://www.gstatic.com/charts/loader.js" type="text/javascript"></script>
     <script src="/webjars/jquery/jquery.min.js" type="text/javascript"></script>
