--- a/web/src/main/resources/templates/trendgraph.html
+++ b/web/src/main/resources/templates/trendgraph.html
@@ -8,7 +8,7 @@
     <title>Team Happiness</title>
     <link href='/webjars/bootstrap/css/bootstrap.min.css' rel='stylesheet'>
     <link rel='stylesheet' th:href="@{/static/css/trendgraph.css}">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.css" rel="stylesheet" type="text/css" />
+    <link href="/webjars/toastr/build/toastr.min.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
   <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
@@ -61,7 +61,7 @@
   </div>
 
     <script src="/webjars/jquery/jquery.min.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.js" type="text/javascript"></script>
+    <script src="/webjars/toastr/build/toastr.min.js" type="text/javascript"></script>
     <script src="/webjars/popper.js/umd/popper.min.js" type="text/javascript"></script>
     <script src="/webjars/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="/webjars/feather-icons/dist/feather.js"></script>
